--- a/lab6/index.html
+++ b/lab6/index.html
@@ -60,7 +60,7 @@
       Timer: <div id="time">00:00</div>
     </div>
     <button onclick="initializeBoardFromAPI()">New Game</button>
-    <button onclick="resetGameBySchema()">New Game</button>
+    <button onclick="resetGameBySchema()">Reset</button>
 
     <script src="lights_out.js"></script>
   </body>
